app-code/homarr/homarr-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homarr-ingress
  namespace: media
spec:
  entryPoints: [web, websecure]
  routes:
    - match: Host(`aura`) || Host(`homarr.aura`) || Host(`100.110.100.1`)
      kind: Rule
      services:
        - name: homarr-svc
          port: 7575
